# mplfontutils

./: LICENSE  README.md  pyproject.toml
.github/workflows/: python-publish.yml
mplfontutils/: __init__.py  __main__.py  core.py
