[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mplfontutils"
version = "0.1.0"
description = "Utility package for testing and loading fonts in matplotlib"
authors = [{ name = "xsjk", email = "xsjk17@outlook.com" }]
readme = "README.md"
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Framework :: Matplotlib",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Typing :: Typed",
]
requires-python = ">=3.9"
dependencies = ["matplotlib>=3.9"]

[project.urls]
Homepage = "https://github.com/xsjk/mplfontutils"
Repository = "https://github.com/xsjk/mplfontutils"

[project.scripts]
mplfontutils = "mplfontutils.__main__:main"
